--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-18",
+  "name": "react-setup",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -10,9 +10,13 @@
     "@types/node": "^16.11.18",
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "autoprefixer": "^10.4.1",
+    "postcss": "^8.4.5",
+    "prettier": "^2.5.1",
+    "react": "^18.0.0-rc.0",
+    "react-dom": "^18.0.0-rc.0",
     "react-scripts": "5.0.0",
+    "tailwindcss": "^3.0.9",
     "typescript": "^4.5.4",
     "web-vitals": "^2.1.2"
   },
