--- a/package.json
+++ b/package.json
@@ -1,44 +1,45 @@
 {
   "name": "react-setup",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "private": true,
   "devDependencies": {
     "msw": "^0.36.4",
-    "@reduxjs/toolkit": "^1.7.1",
-    "@testing-library/jest-dom": "^5.16.1",
-    "@testing-library/react": "^13.0.0-alpha.5",
-    "@testing-library/user-event": "^13.5.0",
+    "@reduxjs/toolkit": "^1.8.1",
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^13.2.0",
+    "@testing-library/user-event": "^14.2.0",
     "ttab": "^0.7.2"
   },
   "dependencies": {
-    "@types/jest": "^27.4.0",
-    "@types/node": "^16.11.18",
-    "@types/react": "^17.0.38",
-    "@types/react-dom": "^17.0.11",
+    "@types/jest": "^27.5.1",
+    "@types/node": "^17.0.33",
+    "@types/react": "^18.0.9",
+    "@types/react-dom": "^18.0.4",
     "autoprefixer": "^10.4.1",
-    "axios": "^0.24.0",
+    "axios": "^0.27.2",
     "json-server": "^0.17.0",
-    "json-server-reset": "^1.3.0",
-    "postcss": "^8.4.5",
-    "prettier": "^2.5.1",
-    "react": "^18.0.0-rc.0",
-    "react-dom": "^18.0.0-rc.0",
-    "react-redux": "^7.2.6",
-    "react-router-dom": "^6.2.1",
-    "react-scripts": "5.0.0",
-    "tailwindcss": "^3.0.9",
-    "typescript": "^4.5.4",
-    "web-vitals": "^2.1.2"
+    "json-server-reset": "^1.3.3",
+    "postcss": "^8.4.13",
+    "prettier": "^2.6.2",
+    "react": "^18.1.0",
+    "react-dom": "^18.1.0",
+    "react-redux": "^8.0.1",
+    "react-router-dom": "^6.3.0",
+    "react-scripts": "5.0.1",
+    "tailwindcss": "^3.0.24",
+    "typescript": "^4.6.4"
   },
   "scripts": {
-    "start": "npm run server & ttab -t 'React scripts' npm run client && ttab -t 'Dev commands'",
+    "start": "npm run client",
+    "startWitServer": "npm run server & ttab -t 'React scripts' npm run client && ttab -t 'Dev commands'",
     "server": "json-server --middlewares ./node_modules/json-server-reset --watch server/db.json --port 3001",
     "client": " BROWSER=brave react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
+    "eject": "react-scripts eject",
+    "preinstall": "node -e \"if(process.env.npm_execpath.indexOf('yarn') === -1) throw new Error('You must use Yarn to install, not NPM')\""
+   },
+    "eslintConfig": {
     "extends": [
       "react-app",
       "react-app/jest"
