--- a/package.json
+++ b/package.json
@@ -3,14 +3,15 @@
   "version": "1.0.0",
   "private": true,
   "devDependencies": {
-    "msw": "^0.36.4",
     "@reduxjs/toolkit": "^1.8.1",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^14.2.0",
+    "msw": "^0.36.4",
     "ttab": "^0.7.2"
   },
   "dependencies": {
+    "@openzeppelin/contracts": "^4.6.0",
     "@types/jest": "^27.5.1",
     "@types/node": "^17.0.33",
     "@types/react": "^18.0.9",
@@ -21,12 +22,14 @@
     "json-server-reset": "^1.3.3",
     "postcss": "^8.4.13",
     "prettier": "^2.6.2",
+    "prettier-plugin-solidity": "^1.0.0-beta.19",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-redux": "^8.0.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "tailwindcss": "^3.0.24",
+    "truffle-assertions": "^0.9.2",
     "typescript": "^4.6.4"
   },
   "scripts": {
@@ -36,10 +39,12 @@
     "client": " BROWSER=brave react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "testContracts": "mocha -w ./test",
     "eject": "react-scripts eject",
-    "preinstall": "node -e \"if(process.env.npm_execpath.indexOf('yarn') === -1) throw new Error('You must use Yarn to install, not NPM')\""
-   },
-    "eslintConfig": {
+    "preinstall": "node -e \"if(process.env.npm_execpath.indexOf('yarn') === -1) throw new Error('You must use Yarn to install, not NPM')\"",
+    "prettier": "prettier --write '{contracts/**/*.sol,src/*.{js,css,html,tsx},test/*.js,.json}'"
+  },
+  "eslintConfig": {
     "extends": [
       "react-app",
       "react-app/jest"
