--- a/package.json
+++ b/package.json
@@ -16,31 +16,36 @@
     "@types/node": "^17.0.33",
     "@types/react": "^18.0.9",
     "@types/react-dom": "^18.0.4",
+    "@web3-react/core": "^6.1.9",
+    "@web3-react/injected-connector": "^6.0.7",
     "autoprefixer": "^10.4.1",
     "axios": "^0.27.2",
     "json-server": "^0.17.0",
     "json-server-reset": "^1.3.3",
+    "node-polyfill-webpack-plugin": "^1.1.4",
     "postcss": "^8.4.13",
     "prettier": "^2.6.2",
     "prettier-plugin-solidity": "^1.0.0-beta.19",
     "react": "^18.1.0",
+    "react-app-rewired": "^2.2.1",
     "react-dom": "^18.1.0",
     "react-redux": "^8.0.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "tailwindcss": "^3.0.24",
     "truffle-assertions": "^0.9.2",
-    "typescript": "^4.6.4"
+    "typescript": "^4.6.4",
+    "web3": "^1.7.3"
   },
   "scripts": {
     "start": "npm run client",
     "startWitServer": "npm run server & ttab -t 'React scripts' npm run client && ttab -t 'Dev commands'",
     "server": "json-server --middlewares ./node_modules/json-server-reset --watch server/db.json --port 3001",
-    "client": " BROWSER=brave react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "client": " BROWSER=brave react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test",
     "testContracts": "mocha -w ./test",
-    "eject": "react-scripts eject",
+    "eject": "react-app-rewired eject",
     "preinstall": "node -e \"if(process.env.npm_execpath.indexOf('yarn') === -1) throw new Error('You must use Yarn to install, not NPM')\"",
     "prettier": "prettier --write '{contracts/**/*.sol,src/*.{js,css,html,tsx},test/*.js,.json}'"
   },
