--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@web3-react/injected-connector": "^6.0.7",
     "autoprefixer": "^10.4.1",
     "axios": "^0.27.2",
+    "crypto-browserify": "^3.12.0",
+    "https-browserify": "^1.0.0",
     "json-server": "^0.17.0",
     "json-server-reset": "^1.3.3",
     "node-polyfill-webpack-plugin": "^1.1.4",
@@ -32,6 +34,8 @@
     "react-redux": "^8.0.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "stream-browserify": "^3.0.0",
+    "stream-http": "^3.2.0",
     "tailwindcss": "^3.0.24",
     "truffle-assertions": "^0.9.2",
     "typescript": "^4.6.4",
