--- a/package.json
+++ b/package.json
@@ -11,11 +11,9 @@
     "ttab": "^0.7.2"
   },
   "dependencies": {
-    "@drizzle/react-components": "^1.5.3",
-    "@drizzle/react-plugin": "^1.5.3",
-    "@drizzle/store": "^1.5.3",
     "@metamask/detect-provider": "^1.2.0",
     "@openzeppelin/contracts": "^4.6.0",
+    "@truffle/contract": "^4.5.12",
     "@types/jest": "^27.5.1",
     "@types/node": "^17.0.33",
     "@types/react": "^18.0.9",
@@ -23,6 +21,7 @@
     "@types/redux-logger": "^3.0.9",
     "@web3-react/core": "^6.1.9",
     "@web3-react/injected-connector": "^6.0.7",
+    "@web3-react/metamask": "^8.0.0-beta.0",
     "autoprefixer": "^10.4.1",
     "axios": "^0.27.2",
     "buffer": "^6.0.3",
@@ -31,6 +30,7 @@
     "json-server": "^0.17.0",
     "json-server-reset": "^1.3.3",
     "node-polyfill-webpack-plugin": "^1.1.4",
+    "path-browserify": "^1.0.1",
     "postcss": "^8.4.13",
     "prettier": "^2.6.2",
     "prettier-plugin-solidity": "^1.0.0-beta.19",
@@ -59,7 +59,7 @@
     "testContracts": "mocha -w ./test",
     "eject": "react-app-rewired eject",
     "preinstall": "node -e \"if(process.env.npm_execpath.indexOf('yarn') === -1) throw new Error('You must use Yarn to install, not NPM')\"",
-    "prettier": "prettier --write '{contracts/**/*.sol,src/*.{js,css,html,tsx},test/*.js,.json}'"
+    "prettier": "prettier --write '{contracts/**/*.sol,src/**/*.{js,ts,css,html,tsx},test/*.js,.json}'"
   },
   "eslintConfig": {
     "extends": [
