--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,7 @@
       "dom.iterable",
       "esnext"
     ],
-    "types": ["react/next", "react-dom/next"],
+    "types": ["react/next", "react-dom/next", "jest", 'mocha'],
     "allowJs": true,
     "skipLibCheck": true,
     "esModuleInterop": true,
